# DeepRCA-Agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mock_env.Dockerfile  mock_main.py  pyproject.toml  requirements-dev.txt  requirements-mock.txt  requirements.txt
.github/workflows/: smoke-test.yml
deeprca/: Dockerfile
docs/: smoke-testing-guide.md
mock_env/: Dockerfile  __init__.py  main.py
prds/: 01_overview_prd.md  02_general_analyzer_prd.md  03_domain_expert_prd.md  04_root_cause_prd.md  05_mock_env_prd.md  06_containerization_prd.md
src/deeprca/: __init__.py  main.py
src/deeprca/agents/: __init__.py  coordinator.py  root_cause.py
src/deeprca/api/: __init__.py  routes.py  websocket.py
src/deeprca/config/: __init__.py  settings.py
src/deeprca/detection/: __init__.py  comparator.py  filters.py  quantile.py  volatility.py
src/deeprca/graph/: __init__.py  main_graph.py  state.py
src/deeprca/middleware/: __init__.py  alert_queue.py  error_recovery.py  evidence_collector.py  satisfaction_push.py  timeout_guard.py
src/deeprca/mock_env/: __init__.py  alert_simulator.py  k8s_simulator.py  kafka_simulator.py  (+5 more)
tests/: Dockerfile
tests/guide/: full-flow-test-guide.md
tests/smoke/: __init__.py  conftest.py  entrypoint.sh  test_agent_flow.py  test_e2e_scenarios.py  test_health.py  test_mock_sims.py  test_smoke.py
tests/unit/: test_comparator.py  test_dimension_analyzers.py  test_domain_experts.py  test_filters.py  test_graph.py  test_mock_env.py  test_quantile.py  test_root_cause.py  test_scenarios.py  test_volatility.py
(+29 files in other folders)
